--- a/Nominee Frontend/package.json
+++ b/Nominee Frontend/package.json
@@ -6,12 +6,16 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.1.3",
+    "connectkit": "^1.0.0",
+    "ethers": "^5.7.2",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "universal-cookie": "^4.0.4",
+    "wagmi": "^0.7.14",
     "web-vitals": "^2.1.4",
     "web3.storage": "^4.4.0"
   },
